# ai-piraci

./: .gitignore  README.md  package-lock.json
AI Pirate Game Development/: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  README.md  backedn_readme.txt  docker-compose.yml  env.example.txt  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
AI Pirate Game Development/backend/: config.py  main.prod.py.example  main.py  server.py
AI Pirate Game Development/backend/graph/: __init__.py  conversation.py
AI Pirate Game Development/backend/models/: game.py  pirate.py
AI Pirate Game Development/backend/services/: elevenlabs_service.py  gpt_audio_service.py  merit_check.py  openrouter_service.py  pirate_service.py  speech_to_text_service.py  validation.py
AI Pirate Game Development/docs/: backedn_readme.md
AI Pirate Game Development/server/: check_models.js  index.js  package-lock.json  package.json
AI Pirate Game Development/src/: vite-env.d.ts
AI Pirate Game Development/src/app/: App.tsx
AI Pirate Game Development/src/app/components/: AdminPanel.tsx  CharacterSelection.tsx  EducationalOutro.tsx  GameInterface.tsx  GameOver.tsx  LandingScreen.tsx  RulesModal.tsx  TreasureMap.tsx  Victory.tsx
AI Pirate Game Development/src/app/hooks/: useGameEngine.ts  useInactivity.ts
AI Pirate Game Development/src/core/: constants.ts  types.ts
AI Pirate Game Development/src/services/: api-config.ts  game.service.ts  llm.service.ts  tts.service.ts
