[project]
name = "pirat-ai"
version = "1.0.0"
description = "Outwit the AI Pirate Game - A conversational game where players try to trick an AI pirate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "langgraph==0.0.26",
    "langchain-core==0.1.25",
    "langchain-openai==0.0.5",
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "streamlit==1.52.0",
    "langdetect==1.0.9",
    "requests==2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.uv]
dev-dependencies = []

